Closed Bug 133666 Opened 23 years ago Closed 23 years ago

Skin switch on restart not completely performed

Categories

(Core Graveyard :: Skinability, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: jrgmorrison, Assigned: bugzilla)

References

Details

(Whiteboard: [adt2 rtm],custrtm-)

Attachments

(2 files)

Skin switch on restart not completely performed Steps to reproduce: 1) create a new profile 2) start browser (comes up in default skin, assume Classic is default for the discussion below.) 3) 'View->Apply Themes->Modern' and say OK to the alert 4) Shut down. Start again. Actual results: Buttons and menu-backgrounds are still in 'Classic' 5) Shut down. Start again. Actual results: Everything is now fully 'Modern' 6) 'View->Apply Themes->Classic' and say OK to the alert 7) Shut down. Start again. Actual results: Buttons and menu-backgrounds are still in 'Modern' 8) Shut down. Start again. Actual results: Everything is now fully 'Classic' Tested with 2002-03-26-10-trunk comm. and with mozilla trunk build on win2k. Reproducible 100% nsbeta1, mozilla1.0
Keywords: mozilla1.0, nsbeta1
critical to mozilla1.0. adding keyword.
Keywords: mozilla1.0mozilla1.0+
nsbeta1+/adt3 per Nav triage team
Keywords: nsbeta1nsbeta1+
Whiteboard: [adt3]
Target Milestone: --- → mozilla1.0
*** Bug 134946 has been marked as a duplicate of this bug. ***
os -> all per dupe
OS: Windows 2000 → All
Blocks: 134771
this bug is related to bug 115940
I don't think that's directly related.. dynamic switching has always done that, while switching after restart has worked.
WFM with 2002-04-05-10 on Linux. Both Modern -> Classic and the other way around are completely done switching theme after a restart for me.
John, have you been able to reproduce this bug with newer builds than 03-26?
Sure. This is reproducible as described above with mozilla builds pulled in the last few hours on both Linux (rh6.1) and win32(win2k).
ccing people who may have an idea of what's up here.
note: restarting a second time after switching themes makes the mixed theme problem go away.
Tracy, when the themes are mixed does it looks the same as the bug on dynamic theme switch? Can you attach a screenshot?
Andre, I can attach the screenshot for you. It seems happen on all platforms changing from PC to all platforms.
using this build (2002-04-11-08-TRUNK)
Hardware: PC → All
Attached image Look at Search button
Strange that I cannot see it. I have tested on several Linux machines at school (latest build) as well as on my Linux box at home, and all widgets are changed to the correct theme.
Confirming pmac's issues. Saw the same behaviour multiple times on recent Win32 trunk builds.
removing from the RC1 tracking bug.
No longer blocks: 134771
I've seen this when switching between modern and lo-fi on Linux, but I'm still mostly using 0.9.9 (but note that not needing to restart was not the issue; first restart did not change everything). Note that if you have extra toolbars (e.g., prefs toolbar, googlebar, uabar) these are least likely to have the correct theme applied the first time. No idea why. This only happens occasionally, and a subsequent additional restart of Mozilla invariably fixes it. It is not 100% reproducable for me. I'll start using a more recent build and see if I can catch this happening again. I switch themes fairly often (because I'm in the process of creating one, but at the moment it's half done and looks like it has mange, so I don't use it for regular browsing) so if anyone can reproduce this I probably can. Adding self to Cc.
John, are you using QuickLaunch?
could be a chrome registry problem
Assignee: ben → hewitt
No. I am not using quickbrunch.
Mass moving nsbeta1+/adt3 bugs assigned to Navigator team engineers out to target milestone 1.0.1. Please confine your attentions to driving down our list of TM 1.0 bugs for beta. Better to help, debug, or test one of them than fix one of these.
Target Milestone: mozilla1.0 → mozilla1.0.1
What actually happens is that when Mozilla shuts down with the Modern theme active, the line user_pref("general.skins.selectedSkin", "modern/1.0"); is struck from the prefs.js file. It happens even if you have selected Modern in the prefs and it does not happen if you shut down with the Classic theme active, but Modern selected in the prefs.
Changing nsbeta1+ [adt3] bugs to nsbeta1- on behalf of the adt. If you have any questions about this, please email adt@netscape.com. You can search for "changing adt3 bugs" to quickly find and delete these bug mails.
Keywords: nsbeta1-
Changing nsbeta1+ [adt3] bugs to nsbeta1- on behalf of the adt. If you have any questions about this, please email adt@netscape.com. You can search for "changing adt3 bugs" to quickly find and delete these bug mails.
Keywords: nsbeta1+
Good grief. Skin switching DOES NOT WORK, either in fact, or in the perception of end users (who will point this out to us ad infinitum). Need I say more about why a BETA release should not ship with this defect?
Keywords: nsbeta1-nsbeta1
Keywords: nsbeta1nsbeta1+
Whiteboard: [adt3] → [adt2 rtm]
Target Milestone: mozilla1.0.1 → mozilla1.0
->blaker
Assignee: hewitt → blaker
*** Bug 141358 has been marked as a duplicate of this bug. ***
*** Bug 141728 has been marked as a duplicate of this bug. ***
Here comes the wah-mbulance .... Wah! This defect is going to be mozilla 1.0?
Attached patch patchSplinter Review
What happens is FlushCaches() reloads the scoped stylesheets, which (because of the profile manager) include listbox.css, checkbox.css, popup.css, and button.css. But since it does so before we SelectSkin(), which updates all the selectedSkin arcs, we load the old stylesheets (of the skin we're about to switch out of). This patch simply reorders the calls to ensure that we refetch the new skin's scoped stylesheets.
sr=hyatt
Comment on attachment 82365 [details] [diff] [review] patch r=ben@netscape.com (adding sr checkmark for hyatt)
Attachment #82365 - Flags: superreview+
Attachment #82365 - Flags: review+
Checked into trunk, marking fixed. But I strongly urge adt to accept this for beta, it's an easy patch and this is an obvious problem, especially for reviewers trying out theme switching. I also see that drivers want this since it's mozilla1.0+...
Status: NEW → RESOLVED
Closed: 23 years ago
Keywords: adt1.0.0
Resolution: --- → FIXED
Whiteboard: [adt2 rtm] → [adt2]
Yes I would second that. This is imperative to get into the Beta as we are going to be updating the three skins from the themepark (toyfactory, fogcity, american theme) for RTM and need to be able to test these out using the beta. Althought theme switching might seem like a minor issue right now, it is something that I suspect would be an easy target for a magazine reviewer to ding us on, and developers of themes to get put off by this defect.
*** Bug 144815 has been marked as a duplicate of this bug. ***
Skin switching works ok on the trunk build (2002-05-17-08-TRUNK). Marking verified.
Status: RESOLVED → VERIFIED
I want for rc3, adding to the no-suck-list.
Blocks: 143200
(I now realize that this condition applies if you have >1 profile, which means the profile manager appears (comment #33). Nonetheless, still something that must be fixed in mozilla1.0 final (with adt considerations being mostly moot)).
Whiteboard: [adt2] → [adt2 rtm]
adt1.0.0+ (on ADT's behalf) for approval to checkin to the 1.0 branch, pending Drivers' approval. After, checking in, please add the fixed1.0 keyword.
Blocks: 143047
Keywords: adt1.0.0adt1.0.0+, approval
Whiteboard: [adt2 rtm] → [adt2 rtm] [Needs a=]
Comment on attachment 82365 [details] [diff] [review] patch a=scc (on behalf of drivers) for checkin to the mozilla1.0 branch
Attachment #82365 - Flags: approval+
Keywords: adt1.0.0+fixed1.0.0
mozilla/rdf/chrome/src/nsChromeRegistry.cpp,v <-- nsChromeRegistry.cpp new revision: 1.240.2.3; previous revision: 1.240.2.2 fix checked into 1.0.0 branch
Whiteboard: [adt2 rtm] [Needs a=] → [adt2 rtm]
Adding custrtm- to comment field.
Whiteboard: [adt2 rtm] → [adt2 rtm],custrtm-
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: