Bug 133666 Skin switch on restart not completely performed patch by blake r=ben sr=hyatt a=scc